# osol

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: args.hpp  node.hpp  solver.hpp  token.hpp  tokenizer.hpp
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  args.cpp  main.cpp  node.cpp  solver.cpp  token.cpp  tokenizer.cpp
